--- a/myRepresentative.css
+++ b/myRepresentative.css
@@ -11,6 +11,10 @@ body {
   text-align: center;
 }
 
+a {
+  color: inherit;
+}
+
 section {
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -38,4 +42,9 @@ section {
   border: 2px solid #4E3E7A;
   min-width: 60vw;
   grid-area: statements;
+}
+
+.release {
+  background-color: #FFF;
+  padding: 1vw;
 }
